# leptos_axum_login

./: .env  .gitignore  Cargo.toml  README.md  server_config.toml
db/: .env  database.sqlite3
db/migrations/: 20240822123651_users.down.sql  20240822123651_users.up.sql  20240824224131_profiles.down.sql  20240824224131_profiles.up.sql
public/: leptos_axum_login.webmanifest
src/: app.rs  auth.rs  config.rs  error_template.rs  fallback.rs  fileserv.rs  lib.rs  main.rs  prelude.rs  server.rs  sqlite_backend.rs  state.rs  user.rs
src/pages/: login.rs  mod.rs  register.rs
src/pages/login/: login_ui.rs  mod.rs
src/pages/register/: mod.rs  register_server.rs  register_ui.rs
style/: input.css
